<resources>
    <string name="app_name">Smart Notification</string>
    <string name="title_activity_time_settings">TimeSettingsActivity</string>

    <string name="action_settings">Settings</string>

    <string name="on_until_you_turn_it_off">On until you turn it off</string>
    <string name="on_for_n_hours">On for %1$d hours</string>
    <string name="on_until_when">On until %1$s</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

    <string name="next_break_in"><b>Next Break in</b></string>
    <string name="next_focus_in"><b>Next Focus in</b></string>
    <string name="minutes">minutes</string>
    <string name="until">until</string>
    <string name="turned_off">"it's turned off"</string>

    <string name="app_icon">App icon</string>

    <string name="mNotifications">Notification</string>
    <string name="bold">bold</string>

    <string name="close">close</string>
    <string name="clear_all">Clear all</string>
    <string name="you_have_zero_notification">You have zero notification</string>
    <string name="clear">Clear</string>
    <string name="add_to_black_list">Add to Blacklist</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="activity">Activity</string>
    <string name="keywords"><![CDATA[Keywords, Senders & Response]]></string>
    <string name="focus_period">Focus Period</string>
    <string name="focus_period_test">6</string>
    <string name="hours">hours</string>
    <string name="break_duration">Break duration</string>
    <string name="minute">mins</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="turn_on_smart_notification_at_night">Turn on Smart Notification at night</string>
    <string name="smart_notification_reminders">Smart Notification reminders</string>
    <string name="smart_noti_reminders_descriptions">Reminds to turn on Smart notification at these locations or turn off Smart notification when leaving these location</string>
    <string name="places">Places</string>
    <string name="places_text_description">Home, Work, Devon Café</string>
    <string name="reminder_messages">Reminder messages</string>
    <string name="reminder_message_text_description">“Are you sure you don’t want to turn it on?” ...</string>
    <string name="home">Home</string>
    <string name="adapter_address">12 MacDonald St Paddington NSW 2021</string>
    <string name="title_activity_settings_places">SettingsPlaces</string>
    <string name="messages_for_reminder">“Are you sure you don’t want to turn it on?”</string>
    <string name="title_activity_settings_reminder_messages">SettingsReminderMessages</string>
    <string name="Include_messages_from_others">Include messages made by others</string>
    <string name="include_messages_from_others_description">We might use messages made by other users when we show reminder message</string>
    <string name="allow_important_senders">Allow important senders to interrupt</string>
    <string name="allow_important_senders_descriptions">Allow these senders to interrupt me during Focus Time mode</string>
    <string name="important_senders">Important senders</string>
    <string name="important_senders_descriptions">Chloe Power, Scot J. Mills, Travis D. Harding</string>
    <string name="allow_keywords">Allow keywords to interrupt</string>
    <string name="allow_keywords_descriptions">Allow messages that contain to interrupt me during Focus Time mode</string>
    <string name="settings_keywords">Keywords</string>
    <string name="keywords_descriptions">“Need your response now”, “Urgent”</string>
    <string name="automatic_response">Automatic response</string>
    <string name="automatic_response_descriptions">The reply message below will be replied when a message does not contain any keywords or is not from an important sender</string>
    <string name="reply_messages">Reply Messages</string>
    <string name="reply_messages_descriptions">“I am not available at the moment, please me again at %NEXTBREAKTIME”</string>
    <string name="title_activity_settings_important_senders">SettingsImportantSenders</string>
    <string name="title_activity_settings_keywords">SettingsKeywords</string>
    <string name="keywords_text">“Need your response now”</string>
    <string name="notification_physical_activity">Notifications during a physical activity</string>
    <string name="noti_physical_activity_descriptions">Allow notifications if a constant activity is detected</string>
    <string name="notification_during_phone_usage">Notification during phone usage</string>
    <string name="notification_during_phone_usage_descriptions">Allow notifications if the system detects that you are on your phone</string>
    <string name="name">Name</string>

    <string name="expand">expand</string>
    <string name="main_hours">Hours</string>
    <string name="main_hour">Hour</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="keywords_senders"><![CDATA[Keywords & Senders]]></string>
    <string name="welcome_dialog_description">This app would help boost your
                productivity when you are trying to focus. Now let’s go to
                Settings to personalise it to
                your liking.</string>
    <string name="notification_acess_text">On the next screen, allow this app to access your notifications by: \n1. Locate the Smart Notification app \n2. Switch the toggle on \nRefer to image below</string>
</resources>
