<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_margin"
    android:paddingRight="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <RadioGroup
        android:id="@+id/dialog_smart_noti_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            style="@style/TextRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_until_you_turn_it_off"
            android:theme="@style/MyRadioButton"/>

        <RadioButton
            android:id="@+id/dialog_smart_noti_on_until_radiobut"
            style="@style/TextRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/on_for_n_hours"
            android:theme="@style/MyRadioButton"/>
    </RadioGroup>

    <TextView
        android:id="@+id/dialog_smart_noti_hint"
        style="@style/TextHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_smart_noti_radiogroup"
        android:layout_marginStart="32dp"
        android:text="@string/on_until_when"/>

    <LinearLayout
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-16dp"
        android:layout_below="@id/dialog_smart_noti_radiogroup">

        <ImageButton

            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_minus_black_24dp"
            style="@style/MyFlatButton"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_black_24dp"
            style="@style/MyFlatButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/dialog_smart_noti_hint"
        android:layout_marginTop="@dimen/activity_margin"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />
    </LinearLayout>


</RelativeLayout>