<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notification_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/elevation_height"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:id="@+id/notification_expand_hint_imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/expand"
        android:src="@drawable/ic_expand_less_white_24dp"
        android:elevation="@dimen/elevation_height"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:elevation="@dimen/elevation_height">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/bottom_sheet_close"
                style="@style/MyFlatButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/close"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_close_grey_24dp" />

            <TextView
                android:id="@+id/bottom_sheet_noti"
                style="@style/MyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/mNotifications"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/bottom_sheet_clear_all"
                style="@style/MyFlatButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/clear_all"
                app:srcCompat="@drawable/ic_clear_all_grey_24dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/bottom_sheet_noti"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/bottom_sheet_recylerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/bottom_sheet_zero_noti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center"
            android:paddingTop="50dp"
            android:text="@string/you_have_zero_notification" />
    </LinearLayout>
</LinearLayout>