<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kasmartnotification.smartnotification.Controller.SettingsLocation">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="parent"
        android:orientation="horizontal"
        android:id="@+id/activity_settings_location_smart_noti_reminders_linear_layout"
        android:weightSum="100"
        style="@style/MyFlatButton">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="80">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRadioButton"
                android:text="@string/smart_notification_reminders"
                android:layout_marginStart="@dimen/margin_top_function"
                android:layout_marginEnd="@dimen/activity_settings_time_margin_start"
                android:layout_marginTop="@dimen/activity_settings_linear_layout_paddingTopBottom"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top_function"
                android:layout_marginEnd="@dimen/activity_settings_time_margin_start"
                android:layout_marginBottom="@dimen/margin_top_function"
                android:text="@string/smart_noti_reminders_descriptions" />
        </LinearLayout>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_weight="20"
            android:layout_gravity="center"
            android:id="@+id/activity_settings_location_smart_noti_reminders_switch"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_settings_location_places_linear_layout"
        style="@style/MyFlatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_location_smart_noti_reminders_linear_layout">

        <TextView
            style="@style/TextRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/activity_settings_time_margin_start"
            android:layout_marginStart="@dimen/margin_top_function"
            android:layout_marginTop="@dimen/margin_top_function"
            android:text="@string/places" />

        <TextView
            android:id="@+id/activity_settings_location_places_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="@dimen/activity_settings_time_margin_start"
            android:layout_marginStart="@dimen/margin_top_function"
            android:layout_marginBottom="@dimen/margin_top_function"
            android:text="@string/places_text_description" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/activity_settings_location_reminder_messages_linear_layout"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_location_places_linear_layout"
        style="@style/MyFlatButton">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextRadioButton"
            android:text="@string/reminder_messages"
            android:layout_marginStart="@dimen/margin_top_function"
            android:layout_marginEnd="@dimen/activity_settings_time_margin_start"
            android:layout_marginTop="@dimen/margin_top_function"
            android:layout_gravity="start" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_message_text_description"
            android:layout_marginStart="@dimen/margin_top_function"
            android:layout_marginEnd="@dimen/activity_settings_time_margin_start"
            android:layout_marginBottom="@dimen/margin_top_function"
            android:layout_gravity="start"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
