<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kasmartnotification.smartnotification.Controller.SettingsKeywordsResponse">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_settings_keywords_response_allow_important_senders_linear_layout"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyFlatButton"
        android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="80"
            android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRadioButton"
                android:text="@string/allow_important_senders"
                android:layout_marginTop="@dimen/margin_top_function"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_important_senders_descriptions"
                android:layout_marginBottom="@dimen/margin_top_function"/>
        </LinearLayout>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end"
            android:layout_gravity="center"
            android:id="@+id/activity_settings_keywords_response_allow_important_senders_switch"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_settings_keywords_response_important_senders_linear_layout"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_keywords_response_allow_important_senders_linear_layout"
        android:background="@drawable/linear_layout_border"
        style="@style/MyFlatButton"
        android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRadioButton"
                android:text="@string/important_senders"
                android:layout_marginStart="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginEnd="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginTop="@dimen/margin_top_function"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginEnd="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginBottom="@dimen/margin_top_function"
                android:text="@string/important_senders_descriptions"
                android:id="@+id/activity_settings_keywords_response_important_senders_text_view"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_settings_keywords_response_allow_keywords_linear_layout"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_keywords_response_important_senders_linear_layout"
        style="@style/MyFlatButton"
        android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="80"
            android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRadioButton"
                android:text="@string/allow_keywords"
                android:layout_marginTop="@dimen/margin_top_function"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_function"
                android:text="@string/allow_keywords_descriptions" />
        </LinearLayout>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_weight="20"
            android:layout_gravity="center"
            android:id="@+id/activity_settings_keywords_response_allow_keywords_switch"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_settings_keywords_response_keywords_linear_layout"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_keywords_response_allow_keywords_linear_layout"
        android:background="@drawable/linear_layout_border"
        style="@style/MyFlatButton"
        android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRadioButton"
                android:text="@string/settings_keywords"
                android:layout_marginStart="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginEnd="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginTop="@dimen/margin_top_function"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginEnd="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginBottom="@dimen/margin_top_function"
                android:text="@string/keywords_descriptions"
                android:id="@+id/activity_settings_keywords_response_keywords_text_view"
                android:maxLines="1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_settings_keywords_response_automatic_response_linear_layout"
        android:orientation="horizontal"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_keywords_response_keywords_linear_layout"
        style="@style/MyFlatButton"
        android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="80"
            android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRadioButton"
                android:text="@string/automatic_response"
                android:layout_marginTop="@dimen/margin_top_function"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_top_function"
                android:text="@string/automatic_response_descriptions" />
        </LinearLayout>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:layout_weight="20"
            android:layout_gravity="center"
            android:id="@+id/activity_settings_keywords_response_automatic_response_switch"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_settings_keywords_response_reply_messages_linear_layout"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/activity_settings_keywords_response_automatic_response_linear_layout"
        android:background="@drawable/linear_layout_border"
        style="@style/MyFlatButton"
        android:paddingStart="@dimen/activity_settings_keyword_response_margin_start_end">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextRadioButton"
                android:text="@string/reply_messages"
                android:layout_marginStart="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginEnd="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginTop="@dimen/margin_top_function"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginEnd="@dimen/activity_settings_keyword_response_margin_start_end"
                android:layout_marginBottom="@dimen/margin_top_function"
                android:text="@string/reply_messages_descriptions" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
